Documentation updated to v1.0.15

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,76 +1,72 @@
-@Book{paoo-gof,
- author = {Erich Gamma and Ralph Johnson and Richard Helm and John Vlissides},
- title = {Design Patterns: Elementi per il Riuso di Software ad Oggetti},
- publisher = {Pearson},
- year = {2002},
- month = 1,
+@book{paoo-gof,
+	title        = {Design Patterns: Elementi per il Riuso di Software ad Oggetti},
+	author       = {Erich Gamma and Ralph Johnson and Richard Helm and John Vlissides},
+	year         = 2002,
+	month        = 1,
+	publisher    = {Pearson}
 }
-
 @book{Fowler03,
- author = {Fowler, Martin},
- title = {UML Distilled: A Brief Guide to the Standard Object Modeling Language},
- year = {2003},
- isbn = {0321193687},
- edition = {3},
- publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
-} 
-
+	title        = {UML Distilled: A Brief Guide to the Standard Object Modeling Language},
+	author       = {Fowler, Martin},
+	year         = 2003,
+	publisher    = {Addison-Wesley Longman Publishing Co., Inc.},
+	address      = {Boston, MA, USA},
+	isbn         = {0321193687},
+	edition      = 3
+}
 @article{Mizzaro03,
-author = {Mizzaro, Stefano},
-title = {{Quality control in scholarly publishing: A new proposal}},
-journal = {Journal of the American Society for Information Science and Technology},
-volume = {54},
-number = {11},
-year = {2003},
-pages = {989-1005},
-doi = {10.1002/asi.10296},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.10296},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/asi.10296},
-abstract = {Abstract The Internet has fostered a faster, more interactive and effective model of scholarly publishing. However, as the quantity of information available is constantly increasing, its quality is threatened, since the traditional quality control mechanism of peer review is often not used (e.g., in online repositories of preprints, and by people publishing whatever they want on their Web pages). This paper describes a new kind of electronic scholarly journal, in which the standard submission-review-publication process is replaced by a more sophisticated approach, based on judgments expressed by the readers: in this way, each reader is, potentially, a peer reviewer. New ingredients, not found in similar approaches, are that each reader's judgment is weighted on the basis of the reader's skills as a reviewer, and that readers are encouraged to express correct judgments by a feedback mechanism that estimates their own quality. The new electronic scholarly journal is described in both intuitive and formal ways. Its effectiveness is tested by several laboratory experiments that simulate what might happen if the system were deployed and used.}
+	title        = {{Quality control in scholarly publishing: A new proposal}},
+	author       = {Mizzaro, Stefano},
+	year         = 2003,
+	journal      = {Journal of the American Society for Information Science and Technology},
+	volume       = 54,
+	number       = 11,
+	pages        = {989--1005},
+	doi          = {10.1002/asi.10296},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.10296}
 }
-
 @article{Alfaro16,
-  author    = {De Alfaro, Luca and
-               Faella, Marco},
-  title     = {TrueReview: A Platform for Post-Publication Peer Review},
-  journal   = {CoRR},
-  volume    = {abs/1608.07878},
-  year      = {2016},
-  url       = {http://arxiv.org/abs/1608.07878},
-  archivePrefix = {arXiv},
-  eprint    = {1608.07878},
-  timestamp = {Mon, 13 Aug 2018 16:46:31 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/AlfaroF16},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+	title        = {TrueReview: A Platform for Post-Publication Peer Review},
+	author       = {De Alfaro, Luca and Faella, Marco},
+	year         = 2016,
+	journal      = {CoRR},
+	volume       = {abs/1608.07878},
+	url          = {http://arxiv.org/abs/1608.07878},
+	archiveprefix = {arXiv},
+	eprint       = {1608.07878},
+	timestamp    = {Mon, 13 Aug 2018 16:46:31 +0200},
+	biburl       = {https://dblp.org/rec/bib/journals/corr/AlfaroF16},
+	bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-
 @misc{RS-PDF,
-  author       = {Soprano, Michael and Mizzaro, Stefano},
-  title        = {{Readersourcing 2.0: RS\_PDF}},
-  doi          = {10.5281/zenodo.1442598},
-  url          = {https://doi.org/10.5281/zenodo.1442597}
+	title        = {{Readersourcing 2.0: RS\_PDF}},
+	author       = {Soprano, Michael and Mizzaro, Stefano},
+	doi          = {10.5281/zenodo.1442598},
+	url          = {https://doi.org/10.5281/zenodo.1442597}
 }
-
 @misc{RS-Server,
-  author       = {Soprano, Michael and Mizzaro, Stefano},
-  title        = {{Readersourcing 2.0: RS\_Server}},
-  doi          = {10.5281/zenodo.1442630},
-  url          = {https://doi.org/10.5281/zenodo.1442630}
+	title        = {{Readersourcing 2.0: RS\_Server}},
+	author       = {Soprano, Michael and Mizzaro, Stefano},
+	doi          = {10.5281/zenodo.1442630},
+	url          = {https://doi.org/10.5281/zenodo.1442630}
 }
-
 @misc{RS-Rate,
-  author       = {Soprano, Michael and Mizzaro, Stefano},
-  title        = {{Readersourcing 2.0: RS\_Rate}},
-  doi          = {10.5281/zenodo.1442599},
-  url          = {https://doi.org/10.5281/zenodo.1442599}
+	title        = {{Readersourcing 2.0: RS\_Rate}},
+	author       = {Soprano, Michael and Mizzaro, Stefano},
+	doi          = {10.5281/zenodo.1442599},
+	url          = {https://doi.org/10.5281/zenodo.1442599}
 }
-
 @misc{RS-Py,
-  author       = {Soprano, Michael and Mizzaro, Stefano},
-  title        = {{Readersourcing 2.0: RS\_Py}},
-  doi          = {10.5281/zenodo.3245208},
-  url          = {https://doi.org/10.5281/zenodo.3245208}
+	title        = {{Readersourcing 2.0: RS\_Py}},
+	author       = {Soprano, Michael and Mizzaro, Stefano},
+	doi          = {10.5281/zenodo.3245208},
+	url          = {https://doi.org/10.5281/zenodo.3245208}
 }
-
-@article{Soprano2019,title = {Crowdsourcing Peer Review: As We May Do},journal = {Communications in Computer and Information Science},year = {2019},volume = {988},pages = {259-273},author = {Soprano, M. and Mizzaro, S.}} 
+@article{Soprano2019,
+	title        = {Crowdsourcing Peer Review: As We May Do},
+	author       = {Soprano, M. and Mizzaro, S.},
+	year         = 2019,
+	journal      = {Communications in Computer and Information Science},
+	volume       = 988,
+	pages        = {259--273}
+}
