--- a/uniudtesi.sty
+++ b/uniudtesi.sty
@@ -107,7 +107,7 @@ pdfkeywords=crowdsourcing peer-review scholarly-publishing}
     \end{Large}\\
   \rule{9cm}{.4pt}\\
   \smallskip
-  \ifthenelse{\equal{\@facolta}{?}}{\uppercase{Department of Mathematics, Computer and Physical Science}}{Facolt\`a di \@facolta}\\
+  \ifthenelse{\equal{\@facolta}{?}}{\uppercase{Department of Mathematics, Computer Science and Physics}}{Facolt\`a di \@facolta}\\
   \medskip
  
   \bigskip\vfill
@@ -149,7 +149,7 @@ pdfkeywords=crowdsourcing peer-review scholarly-publishing}
 
   \medskip
   
-  v1.0.7-alpha\\
+  v1.0.15\\
   \end{center}
   \end{large}
 \end{sffamily}
